# mipt-compiler

./: CMakeLists.txt  README.md  build.sh  test.sh
analysis/: Scanner.h  lexer.l  parser.y
ast/: Makefile  Scanner.h  TreeBuilder.cpp  TreeBuilder.h  Utils.h  lex.yy.cc  lexer.l  parser.y
ast/tree/: Class.cpp  Class.h  Expression.cpp  Expression.h  INode.h  IVisitor.h  MethodDeclaration.cpp  MethodDeclaration.h  NodeTypes.h  Program.cpp  Program.h  Statement.cpp  Statement.h  Type.h  VarDeclaration.cpp  VarDeclaration.h  common.h
ast/tree/visitors/: DemoTreeCreator.h  IVisitor.h  PrettyPrinterVisitor.cpp  PrettyPrinterVisitor.h  PrinterDemo.cpp  PrinterDemo.h  main.cpp
code_generation/X86/: CodeGeneration.cpp  InstructionSet.cpp
irt/: Accept.cpp  GlobalIRTParent.cpp  GlobalIRTParent.h  IIRMutableVisitor.h  IIRVisitor.h  INode.h  ISubtreeWrapper.h  Label.cpp  Label.h  List.h  NodeTypes.h  common.h
irt/activation_records/: ClassStruct.h  IAccess.h  IFrame.h  InFrameAccess.cpp  InFrameAccess.h  InRegAccess.cpp  InRegAccess.h  X86MiniJavaClassStruct.cpp  X86MiniJavaClassStruct.h  X86MiniJavaFrame.cpp  X86MiniJavaFrame.h
irt/activation_records/X86/: X86MiniJavaClassStruct.h  X86MiniJavaFrame.cpp  X86MiniJavaFrame.h
irt/expressions/: Binop.h  Call.h  Const.h  ESeq.h  Eseq.h  IExp.h  Mem.h  Name.h  Temp.cpp  Temp.h  Unop.h
irt/statements/: CJump.h  Exp.h  IStm.h  Jump.h  Label.h  Move.h  Seq.h
irt/translator/: Canoniser.cpp  Canoniser.h  ExprWrapper.h  IRBuilderVisitor.cpp  IRBuilderVisitor.h  IRPrettyPrinter.cpp  IRPrettyPrinter.h  StmWrapper.h  X86IRBuilder.cpp  X86IRBuilder.h
lexical_analyser/: Makefile  lexer.l
symbol_table/: ClassInfo.cpp  ClassInfo.h  Exceptions.h  IdentifierInfo.h  MethodInfo.cpp  MethodInfo.h  StringInterner.cpp  StringInterner.h  Symbol.cpp  Symbol.h  SymbolTable.cpp  SymbolTable.h  SymbolTableBuilder.cpp  SymbolTableBuilder.h  SymbolTableCreatorVisitor.cpp  SymbolTableCreatorVisitor.h  SymbolTableVisitor.cpp  SymbolTableVisitor.h  TypeInfo.cpp  TypeInfo.h  VariableInfo.cpp  VariableInfo.h  common.h
tools/: demo_irt_printer.cpp  dot_printer.cpp  symbol_table_test.cpp  type_checker.cpp
type_checker/: DependencyChecker.cpp  DependencyChecker.h  Exceptions.h  TypeCheckerVisitor.cpp  TypeCheckerVisitor.h
util/: DotPrinter.cpp  DotPrinter.h  StringInterner.cpp  StringInterner.h  Symbol.cpp  Symbol.h
